syntax = "proto3";

package ticket;

// Definition of the Ticket message
message Ticket {
  string id = 1;
  string event_id = 2;
  string name = 3;
  float price = 4;
  int32 quantity_available = 5;
}

// Request and response messages for Ticket methods
message GetTicketRequest {
  string ticket_id = 1;
}

message GetTicketResponse {
  Ticket ticket = 1;
}

message GetAllTicketsRequest {
}

message GetAllTicketsResponse {
  repeated Ticket tickets = 1;
}

message CreateTicketRequest {
  string event_id = 1;
  string name = 2;
  float price = 3;
  int32 quantity_available = 4;
}

message CreateTicketResponse {
  Ticket ticket = 1;
}

message DeleteTicketRequest {
  string ticket_id = 1;
}

message DeleteTicketResponse {
  string message = 1;
}

// Definition of the Ticket service
service TicketService {
  rpc GetTicket(GetTicketRequest) returns (GetTicketResponse);
  rpc GetAllTickets(GetAllTicketsRequest) returns (GetAllTicketsResponse);
  rpc CreateTicket(CreateTicketRequest) returns (CreateTicketResponse);
   rpc DeleteTicket(DeleteTicketRequest) returns (DeleteTicketResponse);
  // Additional methods as needed
}
